--- a/PrevisaoDoTempo/static/index.css
+++ b/PrevisaoDoTempo/static/index.css
@@ -13,6 +13,7 @@
 
 label {
     display: block;
+    cursor: pointer;
 }
 
 form span {
@@ -20,6 +21,33 @@ form span {
     width: 235px;
 }
 
-form input {
+form input[type='text'] {
     width: 70px;
+}
+
+#leitura {
+    background-color: white;
+    display: none;
+    position: fixed;
+    bottom: 50px;
+    width: 600px;
+    height: 50%;
+    margin: auto;
+}
+
+#leitura > iframe {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
+#leitura > #headerinmet {
+    text-align: center;
+    font-variant: small-caps;
+    background-color: azure;
+}
+
+#leitura > #headerinmet a {
+    color: black;
+    text-decoration: underline;
 }
