--- a/PrevisaoDoTempo/templates/index.html
+++ b/PrevisaoDoTempo/templates/index.html
@@ -17,17 +17,25 @@
             <fieldset>
                 <legend>Entradas para a previsão</legend>
                 <div class='centraliza'>
-                    <label><span>Precipitação</span><input type='text' name='chuva' pattern='^\d+(\.\d{1,2})?$' value='{{ params.chuva }}' required/></label>
-                    <label><span>Hora Atual</span><input type='text' name='hora' pattern='\d{1,2}' value='{{ params.hora }}' required/></label>
-                    <label><span>Temperatura (hora anterior)</span><input type='text' name='tanterior' pattern='^\d+(\.\d{1,2})?$' value='{{ params.tanterior }}' required/></label>
-                    <label><span>Temperatura Atual</span><input type='text' name='tatual' pattern='^\d+(\.\d{1,2})?$' value='{{ params.tatual }}' required/></label>
-                    <label><span>Radiação (hora anterior)</span><input type='text' name='ranterior' pattern='^\d+(\.\d{1,2})?$' value='{{ params.ranterior }}' required/></label>
-                    <label><span>Radiação Atual</span><input type='text' name='ratual' pattern='^\d+(\.\d{1,2})?$' value='{{ params.ratual }}' required/></label>
+                    <label><span>Chuva</span><input type='text' name='chuva' pattern='^\d+(\.\d{1,2})?$' value='{{ params.chuva }}' required/> (mm)</label>
+                    <label><span>Hora Atual</span><input type='text' name='hora' pattern='\d{1,2}' value='{{ params.hora }}' required/> (UTC)</label>
+                    <label><span>Temperatura (hora anterior)</span><input type='text' name='tanterior' pattern='^\d+(\.\d{1,2})?$' value='{{ params.tanterior }}' required/> °C (instantânea)</label>
+                    <label><span>Temperatura Atual</span><input type='text' name='tatual' pattern='^\d+(\.\d{1,2})?$' value='{{ params.tatual }}' required/> °C (instantânea)</label>
+                    <label><span>Radiação (hora anterior)</span><input type='text' name='ranterior' pattern='^\d+(\.\d{1,2})?$' value='{{ params.ranterior }}' required/> (kJ/m²)</label>
+                    <label><span>Radiação Atual</span><input type='text' name='ratual' pattern='^\d+(\.\d{1,2})?$' value='{{ params.ratual }}' required/> (kJ/m²)</label>
                     <input type='submit' value='Rodar' />
+                    <input id='visualizar' type='button' value='Visualizar leitura da estação (INMET-A702)' />
                 </div>
             </fieldset>
         </form>
         <div id="container"></div>
+</div>
+<div id='leitura'>
+    <div id='headerinmet'>
+        <a href='http://www.inmet.gov.br'>Cortesia INMET</a>
+        <input id='fechar' type='button' value='Fechar' />
+    </div>
+    <iframe name='inmet' src="http://www.inmet.gov.br/sonabra/pg_dspDadosCodigo.php?QTcwMg=="></iframe>
 </div>
 </body>
 </html>
