previsão de radiação solar

--- a/PrevisaoDoTempo/templates/index.html
+++ b/PrevisaoDoTempo/templates/index.html
@@ -9,6 +9,7 @@
     <script>
         var temperaturas = {{ obj.temperaturas }};
         var precipitacao = {{ obj.precipitacao }};
+        var radiacao = {{ obj.radiacao }};
     </script>
 </head>
 <body>
