--- a/PrevisaoDoTempo/static/index.css
+++ b/PrevisaoDoTempo/static/index.css
@@ -1,4 +1,9 @@
-#container {
+body {
+    background-color: #EEEEEE;
+}
+
+
+#container, #containerradiacao {
     width: 100%;
     height: 400px;
 }
